Refactoring around Responses
