# planner/src/main/kotlin/de/debuglevel/walkingdinner/planner/plan/GetPlanResponse.kt
@@ -1,0 +1,16 @@
+package de.debuglevel.walkingdinner.planner.plan
+
+import java.util.*
+
+data class GetPlanResponse(
+    val id: UUID,
+    val meetings: Set<GetMeetingResponse>,
+    val additionalInformation: String,
+) {
+    constructor(plan: Plan) : this(
+        id = plan.id,
+        meetings = plan.meetings.map { GetMeetingResponse(it) }.toSet(),
+        additionalInformation = plan.additionalInformation,
+    )
+}
+
