# planner/src/main/kotlin/de/debuglevel/walkingdinner/planner/plan/PlanResponse.kt
@@ -1,15 +1,0 @@
-package de.debuglevel.walkingdinner.planner.plan
-
-import java.util.*
-
-data class PlanResponse(
-    val id: UUID,
-    val meetings: Set<MeetingResponse>
-)
-
-fun Plan.toPlanResponse(): PlanResponse {
-    return PlanResponse(
-        id = this.id,
-        meetings = this.meetings.map { it.toMeetingResponse() }.toSet()
-    )
-}
