# planner/src/main/kotlin/de/debuglevel/walkingdinner/planner/plan/TeamResponse.kt
@@ -1,12 +1,0 @@
-package de.debuglevel.walkingdinner.planner.plan
-
-import de.debuglevel.walkingdinner.planner.Team
-import java.util.*
-
-data class TeamResponse(val id: UUID)
-
-fun Team.toTeamResponse(): TeamResponse {
-    return TeamResponse(
-        id = this.id
-    )
-}
